# TURMorIC

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  pyproject.toml.save  requirements.txt  user_stories.md
.github/workflows/: python-package-conda.yml
docs/: component_specs.md  components_specs.md  conf.py  exisiting_components.md  gui_details.md  index.rst  modules.rst  quickstart.rst  requirements.txt  use_cases.md  user_stories.md
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  modules.doctree  quickstart.doctree  turmoric.doctree
docs/_build/doctrees/api/: function_index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  turmoric.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  (+2 more)
docs/api/: modules.rst
example_dataset/: images_to_apply_model.csv
notebooks/: morphology_plots.ipynb  threshold_validation.ipynb  train_vampire_model.ipynb  vampire_workflow.ipynb
scr/GUI_components/: GUI_template
scripts/: apply_regionprops.py  apply_single_threshold.py  combine_regionprops_csvs.py  concat_csvs.py  nd2_to_tif.py  npy_to_tif.py  plot_regionprops.py  run_vampire.py  split_files.py  train_test_split.py  train_vampire_model.py  try_all_thresh.py
src/nosferatu/GUI_components/: CentralNode.py  GUI_template.py  MainWindow.py
src/turmoric/: apply_thresholds.py  cell_analysis.py  image_process.py  main.py  utils.py  vampire_model.py
src/turmoric/GUI_components/: BuildModel.py  FunctionHandler.py  ImageHandler.py
test/: image_filtering_and_cleaning.py  test_adaptive_thresholding.py  test_analysis.py  test_apply_thresholds.py  test_cell_analysis.py  test_image_filtering_and_cleaning.py  test_image_preprocessing.py  test_image_process.py  test_preprocessing.py  test_segmentation.py  test_utils.py
(+10 files in other folders)
