[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nosferatu"
version = "0.1.0"
authors = [
	{ name="Nels Schimek", email="nlsschim@uw.edu"},
	{ name="Krista Phommatha", email="krisphom@uw.edu" },
	{ name="Colin Landis", email="colinl1@uw.edu"},
	{ name="Muna Yase", email="myase@uw.edu"},
	{ name="Heather Wood", email="hwood2@uw.edu"},
	{ name="Sergi Mayta", email="smayta@uw.edu"},
]
